--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,35 @@
   align-items: center;
   flex-wrap: wrap;
   height: 100vh;
+  font-family: monospace;
+}
+
+.nav{
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  width: 100vw;
+  background-color: #333;
+  color: white;
+  box-shadow: 0px 0px 20px 5px grey;
+  z-index: 1;
+}
+
+.nav div{
+  margin-right: 20px;
+  cursor: pointer;
+}
+.nav div:hover{
+  color: gray;
+}
+
+.footer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: grey;
+  padding: 10px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
