--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  padding: 40px;
+  padding: 60px;
   background-color: #f7f7f7;
   box-shadow: 0px 0px 15px 20px #eeeeee;
 }
@@ -23,29 +23,43 @@
   align-items: center;
   flex-wrap: wrap;
   padding: 40px;
-  background-color: #f7f7f7;
-  box-shadow: 0px 0px 15px 20px #eeeeee;
-  height: 80vh;
+  background-color: white;
+  box-shadow: 0px 0px 15px 20px white;
+  height: 100vh;
 }
+
+.section3{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 60px;
+  background-color: white;
+}
+
 
 .text{
   font-size: larger;
+  color: #ed9600;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 button{
-  background-color: #e0e0e0;
   outline: none;
   border: none;
-  border-bottom: 2px solid black;
+  font-size: large;
+  color: #ed9600;
+  border-bottom: 3px solid orange;
   padding: 10px;
+  margin-top: 20px;
   cursor: pointer;
   border-radius: 5px;
   transition: 0.5s;
 }
 
 button:hover{
-  background-color: tomato;
+  background-color: #ed9600;
+  color: white;
 }
 
 .mainNav{
@@ -71,25 +85,32 @@ button:hover{
 .nav div{
   margin-right: 20px;
   cursor: pointer;
-  transition: 0.5s;
+  transition: 0.3s;
 }
 .nav div:hover{
-  color: gray;
+  color: #ed9600;
 }
 
 .cols{
   padding: 10px;
   border-radius: 10px;
+  margin: 5px;
   min-width: 250px;
-  max-width: 30vw;
-  background: linear-gradient(0deg, rgba(99,80,80,1) 0%, rgba(238,238,238,1) 100%);;
+  max-width: 28vw;
+  border: 1px solid orange;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.cols:hover{
+  box-shadow: 0px 0px 15px 20px #eeeeee;
 }
 
 .footer{
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: grey;
   padding: 10px;
+  box-shadow: 0px 0px 15px 20px #eeeeee;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
