--- a/src/App.css
+++ b/src/App.css
@@ -62,18 +62,22 @@ button:hover{
   color: white;
 }
 
-.mainNav{
+.navWrapper{
   position: fixed;
   top: 0px;
   width: 100vw;
   background: white;
   box-shadow: 0px 0px 20px 5px #dbdbdb;
+  z-index: 100;
+  min-height: 50px;
+  padding: 5px;
+}
+
+.mainNav{
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  z-index: 100;
-  padding: 5px;
 }
 
 .nav{
